--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,5 @@ jobs:
     
     steps:
     - uses: elementary/actions/vala-lint@master
-      name: Lint
+    - name: Lint
+      run: io.elementary.vala-lint -d .
