--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install Dependencies
       run: |
         apt update
-        apt install -y libecal-1.2 libedataserver-1.2 libgranite-dev libgtk-3-dev libical meson valac
+        apt install -y libecal-1.2-dev libedataserver-1.2-dev libgranite-dev libgtk-3-dev libical-dev meson valac
     - name: Build
       env:
         DESTDIR: out
