Introducing the TaskModel to avoid getting lost due to ICal.Component is gone after first run.

--- a/meson.build
+++ b/meson.build
@@ -18,6 +18,7 @@ executable(
     'src/Application.vala',
     'src/ListView.vala',
     'src/MainWindow.vala',
+    'src/TaskModel.vala',
     'src/Widgets/SourceRow.vala',
     'src/Widgets/TaskRow.vala',
     'src/Widgets/ListSettingsPopover.vala',
