attempt to replace Tasks.TaskModel with ECal.Component

--- a/meson.build
+++ b/meson.build
@@ -18,7 +18,7 @@ executable(
     'src/Application.vala',
     'src/ListView.vala',
     'src/MainWindow.vala',
-    'src/TaskModel.vala',
+    'src/Util.vala',
     'src/Widgets/DateTimePicker.vala',
     'src/Widgets/SourceRow.vala',
     'src/Widgets/TaskRow.vala',
