Moved task details into their own Widget

--- a/meson.build
+++ b/meson.build
@@ -22,6 +22,7 @@ executable(
     'src/Widgets/EditableLabel.vala',
     'src/Widgets/SourceRow.vala',
     'src/Widgets/TaskRow.vala',
+    'src/Widgets/TaskDetailRevealer.vala',
     'src/Widgets/ListSettingsPopover.vala',
     'src/Widgets/TaskSettingsPopover.vala',
     dependencies: [
