--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: x11
 Priority: extra
 Maintainer: elementary, Inc. <builds@elementary.io>
 Build-Depends: debhelper (>= 10.5.1),
-               libecal1.2-dev,
+               libecal2.0-dev | libecal1.2-dev (>= 3.8.0),
                libedataserver1.2-dev,
                libgranite-dev,
                libgtk-3-dev,
