--- a/meson.build
+++ b/meson.build
@@ -23,8 +23,8 @@ executable(
     'src/Widgets/SourceRow.vala',
     'src/Widgets/TaskRow.vala',
     'src/Widgets/TaskDetailRevealer.vala',
-    'src/Widgets/ListSettingsPopover.vala',
-    'src/Widgets/TaskSettingsPopover.vala',
+    'src/Widgets/TaskFormRevealer.vala',
+    'src/Widgets/ListSettingsPopover.vala'
     dependencies: [
         dependency('glib-2.0'),
         dependency('gobject-2.0'),
