--- a/meson.build
+++ b/meson.build
@@ -12,6 +12,17 @@ gresource = gnome.compile_resources(
     source_dir: 'data'
 )
 
+libecal_dep = dependency('libecal-2.0', required: false)
+if libecal_dep.found()
+    libical_dep = dependency('libical-glib')
+    add_project_arguments('--define=E_CAL_2_0', language: 'vala')
+    add_project_arguments('-DLIBICAL_GLIB_UNSTABLE_API=1', language: 'c')
+else
+    libecal_dep = dependency('libecal-1.2', version: '>=3.8.0')
+    libical_dep = dependency('libical')
+    add_project_arguments('--vapidir', join_paths(meson.current_source_dir(), 'vapi'), language: 'vala')
+endif
+
 executable(
     meson.project_name(),
     gresource,
@@ -29,9 +40,9 @@ executable(
         dependency('gobject-2.0'),
         dependency('granite', version: '>=0.5'),
         dependency('gtk+-3.0'),
-        dependency('libecal-1.2'),
+        libecal_dep,
         dependency('libedataserver-1.2'),
-        dependency('libical')
+        libical_dep
     ],
     install : true
 )
