--- a/meson.build
+++ b/meson.build
@@ -34,6 +34,7 @@ executable(
     'src/Widgets/SourceRow.vala',
     'src/Widgets/TaskRow.vala',
     'src/Widgets/ListSettingsPopover.vala',
+    'src/TaskModel.vala',
     dependencies: [
         dependency('glib-2.0'),
         dependency('gobject-2.0'),
