CI: Test against Odin as well (#95)
* CI: Test against Odin as well

* Update main.yml

* Update main.yml

* Update main.yml

* Update main.yml

* Update main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     container:
-      image: elementary/docker:unstable
+      image: elementary/docker:juno-unstable
 
     steps:
     - uses: actions/checkout@v1
@@ -16,6 +16,27 @@ jobs:
       run: |
         apt update
         apt install -y libecal1.2-dev libedataserver1.2-dev libgranite-dev libgtk-3-dev libical-dev meson valac
+    - name: Build
+      env:
+        DESTDIR: out
+      run: |
+        meson build
+        ninja -C build
+        ninja -C build install
+
+  build-odin-unstable:
+
+    runs-on: ubuntu-latest
+
+    container:
+      image: elementary/docker:odin-unstable
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Install Dependencies
+      run: |
+        apt update
+        apt install -y libecal2.0-dev libedataserver1.2-dev libgranite-dev libgtk-3-dev libical-dev meson valac
     - name: Build
       env:
         DESTDIR: out
