First compiling proposal for Calendar.Store

--- a/meson.build
+++ b/meson.build
@@ -30,6 +30,10 @@ executable(
     'src/ListView.vala',
     'src/MainWindow.vala',
     'src/Util.vala',
+    'src/Services/Calendar/Store.vala',
+    'src/Services/Calendar/Util.vala',
+    'src/Services/Calendar/Util/DateRange.vala',
+    'src/Services/Calendar/Util/DateIterator.vala',
     'src/Widgets/EditableLabel.vala',
     'src/Widgets/ScheduledRow.vala',
     'src/Widgets/SourceRow.vala',
