--- a/debian/control
+++ b/debian/control
@@ -3,10 +3,11 @@ Section: x11
 Priority: extra
 Maintainer: elementary, Inc. <builds@elementary.io>
 Build-Depends: debhelper (>= 10.5.1),
-               libecal2.0-dev | libecal1.2-dev (>= 3.8.0),
+               libecal2.0-dev,
                libedataserver1.2-dev,
                libgranite-dev,
                libgtk-3-dev,
+               libhandy-1-dev (>= 0.90.0),
                libical-dev,
                meson,
                valac
