Aligned EDS specific code to the same namespace and structure used in Calendar

--- a/meson.build
+++ b/meson.build
@@ -20,13 +20,16 @@ executable(
     'src/Application.vala',
     'src/ListView.vala',
     'src/MainWindow.vala',
+    'src/Services/Calendar/TaskStore.vala',
+    'src/Services/Calendar/Util/DateTime.vala',
+    'src/Services/Calendar/Util/ECalComponent.vala',
+    'src/Services/Calendar/Util/ICalTime.vala',
     'src/Util.vala',
     'src/Widgets/EditableLabel.vala',
     'src/Widgets/ScheduledRow.vala',
     'src/Widgets/SourceRow.vala',
     'src/Widgets/TaskRow.vala',
     'src/Widgets/ListSettingsPopover.vala',
-    'src/TaskModel.vala',
     dependencies: [
         dependency('glib-2.0'),
         dependency('gobject-2.0'),
