Restructured code according to feedback of @danrabbit

--- a/meson.build
+++ b/meson.build
@@ -20,10 +20,9 @@ executable(
     'src/Application.vala',
     'src/ListView.vala',
     'src/MainWindow.vala',
-    'src/Services/Calendar/TaskStore.vala',
-    'src/Services/Calendar/Util/DateTime.vala',
-    'src/Services/Calendar/Util/ECalComponent.vala',
-    'src/Services/Calendar/Util/ICalTime.vala',
+    'src/EDS/EDS.vala',
+    'src/EDS/ICalTime.vala',
+    'src/EDS/TaskStore.vala',
     'src/Util.vala',
     'src/Widgets/EditableLabel.vala',
     'src/Widgets/ScheduledRow.vala',
