TaskRow: Add TRANSLATORS comment for due date and time

--- a/po/meson.build
+++ b/po/meson.build
@@ -1,5 +1,8 @@
 i18n.gettext(meson.project_name (),
-    args: '--directory=' + meson.source_root(),
+    args: [
+        '--directory=' + meson.source_root(),
+        '-cTRANSLATORS'
+    ],
     preset: 'glib'
 )
 
