--- a/meson.build
+++ b/meson.build
@@ -37,6 +37,7 @@ executable(
         dependency('gtk+-3.0'),
         dependency('libecal-2.0'),
         dependency('libedataserver-1.2'),
+        dependency('libgeoclue-2.0'),
         dependency('libhandy-1', version: '>=0.90.0'),
         dependency('libical-glib'),
         dependency('geocode-glib-1.0'),
