build: Remove the vapi directory
The support for libecal-1.2 has been removed since a long time now

--- a/meson.build
+++ b/meson.build
@@ -3,16 +3,14 @@ project('io.elementary.tasks', 'vala', 'c')
 gnome = import('gnome')
 i18n = import('i18n')
 
-add_global_arguments('-DGETTEXT_PACKAGE="@0@"'.format (meson.project_name()), language:'c')
-add_project_arguments(['--vapidir', join_paths(meson.current_source_dir(), 'vapi')], language: 'vala')
+add_project_arguments('-DGETTEXT_PACKAGE="@0@"'.format (meson.project_name()), language:'c')
+add_project_arguments('-DLIBICAL_GLIB_UNSTABLE_API=1', language: 'c')
 
 gresource = gnome.compile_resources(
     'gresource',
     join_paths('data', 'gresource.xml'),
     source_dir: 'data'
 )
-
-add_project_arguments('-DLIBICAL_GLIB_UNSTABLE_API=1', language: 'c')
 
 executable(
     meson.project_name(),
