--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install Dependencies
       run: |
         apt update
-        apt install -y libecal2.0-dev libedataserver1.2-dev libgranite-dev libgtk-3-dev libhandy-1-dev libical-dev meson valac
+        apt install -y libecal2.0-dev libedataserver1.2-dev libgranite-dev libgtk-3-dev libhandy-1-dev libical-dev libgdata-dev meson valac
     - name: Build
       env:
         DESTDIR: out
