--- a/meson.build
+++ b/meson.build
@@ -17,12 +17,18 @@ add_project_arguments('-DLIBICAL_GLIB_UNSTABLE_API=1', language: 'c')
 libecal_dep = dependency('libecal-2.0')
 
 tasks_deps = [
+    dependency('champlain-0.12'),
+    dependency('champlain-gtk-0.12'),
+    dependency('clutter-1.0'),
+    dependency('clutter-gtk-1.0'),
+    dependency('geocode-glib-1.0'),
     dependency('glib-2.0'),
     dependency('gobject-2.0'),
     dependency('granite', version: '>=0.5'),
     dependency('gtk+-3.0'),
     libecal_dep,
     dependency('libedataserver-1.2'),
+    dependency('libgeoclue-2.0'),
     dependency('libhandy-1', version: '>=0.90.0'),
     dependency('libical-glib')
 ]
@@ -36,11 +42,13 @@ executable(
     gresource,
     'src/Application.vala',
     'src/ListView.vala',
+    'src/Location.vala',
     'src/MainWindow.vala',
     'src/Util.vala',
     'src/Widgets/EditableLabel.vala',
     'src/Widgets/EntryPopover.vala',
     'src/Widgets/DateTimePopover.vala',
+    'src/Widgets/LocationPopover.vala',
     'src/Widgets/ScheduledRow.vala',
     'src/Widgets/SourceRow.vala',
     'src/Widgets/TaskRow.vala',
