--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: elementary, Inc. <builds@elementary.io>
 Build-Depends: debhelper (>= 10.5.1),
                libecal2.0-dev,
                libedataserver1.2-dev,
+               libgdata-dev,
                libgranite-dev,
                libgtk-3-dev,
                libhandy-1-dev (>= 0.90.0),
