--- a/data/tasks.appdata.xml.in
+++ b/data/tasks.appdata.xml.in
@@ -5,7 +5,7 @@
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0+</project_license>
   <name>Tasks</name>
-  <summary>Synced tasks and reminders on elementary OS</summary>
+  <summary>Synced tasks and reminders</summary>
   <description>
     <p>
       Tasks is designed and built to help manage all of your tasks and reminders. Create and complete tasks, 
