--- a/data/tasks.appdata.xml.in
+++ b/data/tasks.appdata.xml.in
@@ -5,9 +5,12 @@
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0+</project_license>
   <name>Tasks</name>
-  <summary></summary>
+  <summary>Synced tasks and reminders</summary>
   <description>
-    <p></p>
+    <p>
+      Tasks is designed and built to help manage all of your tasks and reminders. Create and complete tasks, 
+      manage lists and sync them across your machines using calDav.
+    </p>
   </description>
   <provides>
     <binary>io.elementary.tasks</binary>
