--- a/io.elementary.tasks.yml
+++ b/io.elementary.tasks.yml
@@ -98,6 +98,23 @@ modules:
         url: https://gitlab.gnome.org/GNOME/libhandy.git
         tag: '1.0.0'
 
+  - name: champlain
+    buildsystem: meson
+    sources:
+      - type: git
+        url: https://gitlab.gnome.org/GNOME/libchamplain.git
+        tag: 'LIBCHAMPLAIN_0_12_20'
+
+  - name: geocode-glib
+    buildsystem: meson
+    config-opts:
+      - '-Denable-installed-tests=false'
+      - '-Denable-gtk-doc=false'
+    sources:
+      - type: git
+        url: https://gitlab.gnome.org/GNOME/geocode-glib.git
+        tag: '3.26.2'
+
   - name: tasks
     buildsystem: meson
     sources:
