--- a/meson.build
+++ b/meson.build
@@ -44,13 +44,13 @@ executable(
     meson.project_name(),
     gresource,
     'src/Application.vala',
-    'src/ListView.vala',
     'src/Location.vala',
     'src/MainWindow.vala',
     'src/Util.vala',
     'src/Widgets/EditableLabel.vala',
     'src/Widgets/EntryPopover.vala',
     'src/Widgets/DateTimePopover.vala',
+    'src/Widgets/ListView.vala',
     'src/Widgets/LocationPopover.vala',
     'src/Widgets/ScheduledRow.vala',
     'src/Widgets/SourceRow.vala',
