CI: update flatpak action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,11 @@
 name: CI
 
-on: [push, pull_request]
-
+on:
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
 jobs:
   build:
 
@@ -25,26 +29,30 @@ jobs:
         ninja -C build install
 
   flatpak:
+    name: Flatpak
     runs-on: ubuntu-latest
 
     container:
-      image: docker.io/bilelmoussaoui/flatpak-github-actions
+      image: bilelmoussaoui/flatpak-github-actions:elementary-juno
       options: --privileged
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: bilelmoussaoui/flatpak-github-actions@master
-      with:
-        bundle: "io.elementary.tasks.flatpak"
-        manifest-path: "io.elementary.tasks.yml"
-        repository-name: "elementary"
-        repository-url: "https://flatpak.elementary.io/elementary.flatpakrepo"
-        cache-key: "flatpak-builder-${{ github.sha }}"
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Build
+        uses: bilelmoussaoui/flatpak-github-actions/flatpak-builder@v3
+        with:
+          bundle: tasks.flatpak
+          manifest-path: io.elementary.tasks.yml
+          run-tests: true
+          repository-name: appcenter
+          repository-url: https://flatpak.elementary.io/repo.flatpakrepo
+          cache-key: "flatpak-builder-${{ github.sha }}"
 
   lint:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - uses: elementary/actions/vala-lint@master
