--- a/data/tasks.appdata.xml.in
+++ b/data/tasks.appdata.xml.in
@@ -8,8 +8,8 @@
   <summary>Synced tasks and reminders</summary>
   <description>
     <p>
-      Tasks is designed and built to help manage all of your tasks and reminders. Create and complete tasks, 
-      manage lists and sync them across your machines using calDav.
+      Designed and built to help manage all of your tasks and reminders.
+      Create and complete tasks, manage lists and sync them across your machines using CalDAV.
     </p>
   </description>
   <provides>
