--- a/data/tasks.appdata.xml.in
+++ b/data/tasks.appdata.xml.in
@@ -12,6 +12,19 @@
       Create and complete tasks, manage lists and sync them across your machines using CalDAV.
     </p>
   </description>
+  <releases>
+    <release version="6.0.0" date="2021-07-19" urgency="medium">
+      <description>
+        <p>First release!</p>
+        <ul>
+          <li>Support the dark style</li>
+          <li>Add and remove task lists with custom colors</li>
+          <li>See scheduled tasks from all lists at once</li>
+          <li>Set due dates</li>
+        </ul>
+      </description>
+    </release>
+  </releases>
   <provides>
     <binary>io.elementary.tasks</binary>
   </provides>
