--- a/io.elementary.tasks.yml
+++ b/io.elementary.tasks.yml
@@ -1,6 +1,6 @@
 app-id: io.elementary.tasks
 runtime: io.elementary.Platform
-runtime-version: 'daily'
+runtime-version: '6.0.0'
 sdk: io.elementary.Sdk
 command: io.elementary.tasks
 finish-args:
