--- a/data/tasks.appdata.xml.in
+++ b/data/tasks.appdata.xml.in
@@ -28,6 +28,11 @@
   <provides>
     <binary>io.elementary.tasks</binary>
   </provides>
+  <screenshots>
+    <screenshot type="default">
+      <image>https://raw.githubusercontent.com/elementary/tasks/master/data/screenshot.png</image>
+    </screenshot>
+  </screenshots>
   <content_rating type="oars-1.1">
     <content_attribute id="violence-cartoon">none</content_attribute>
     <content_attribute id="violence-fantasy">none</content_attribute>
