--- a/data/tasks.appdata.xml.in
+++ b/data/tasks.appdata.xml.in
@@ -12,9 +12,27 @@
       Create and complete tasks, manage lists and sync them across your machines using CalDAV.
     </p>
   </description>
+  <releases>
+    <release version="6.0.0" date="2021-07-19" urgency="medium">
+      <description>
+        <p>First release!</p>
+        <ul>
+          <li>Support the dark style</li>
+          <li>Add and remove task lists with custom colors</li>
+          <li>See scheduled tasks from all lists at once</li>
+          <li>Set due dates</li>
+        </ul>
+      </description>
+    </release>
+  </releases>
   <provides>
     <binary>io.elementary.tasks</binary>
   </provides>
+  <screenshots>
+    <screenshot type="default">
+      <image>https://raw.githubusercontent.com/elementary/tasks/master/data/screenshot.png</image>
+    </screenshot>
+  </screenshots>
   <content_rating type="oars-1.1">
     <content_attribute id="violence-cartoon">none</content_attribute>
     <content_attribute id="violence-fantasy">none</content_attribute>
