flatpak manifest: Add DRI permission

--- a/io.elementary.tasks.yml
+++ b/io.elementary.tasks.yml
@@ -4,6 +4,7 @@ runtime-version: '6'
 sdk: io.elementary.Sdk
 command: io.elementary.tasks
 finish-args:
+  - '--device=dri'
   - '--share=ipc'
   - '--share=network'
   - '--socket=fallback-x11'
