--- a/meson.build
+++ b/meson.build
@@ -64,6 +64,7 @@ executable(
     'src/Widgets/EntryPopover/Generic.vala',
     'src/Widgets/EntryPopover/Location.vala',
     'src/Widgets/TaskListGrid.vala',
+    'src/Widgets/ScheduledTaskListGrid.vala',
     'src/Widgets/ScheduledRow.vala',
     'src/Widgets/SourceRow.vala',
     'src/Widgets/TaskRow.vala',
