--- a/meson.build
+++ b/meson.build
@@ -33,6 +33,7 @@ tasks_deps = [
     dependency('clutter-1.0'),
     dependency('clutter-gtk-1.0'),
     dependency('geocode-glib-1.0'),
+    dependency('gio-2.0'),
     dependency('glib-2.0'),
     dependency('gobject-2.0'),
     dependency('granite', version: '>=0.5'),
@@ -58,6 +59,7 @@ executable(
     'src/Application.vala',
     'src/Location.vala',
     'src/MainWindow.vala',
+    'src/OnlineAccountsDBusService.vala',
     'src/Util.vala',
     'src/Widgets/EditableLabel.vala',
     'src/Widgets/EntryPopover/DateTime.vala',
