Added HyperTextView for testing

--- a/meson.build
+++ b/meson.build
@@ -63,6 +63,7 @@ executable(
     'src/Widgets/EntryPopover/DateTime.vala',
     'src/Widgets/EntryPopover/Generic.vala',
     'src/Widgets/EntryPopover/Location.vala',
+    'src/Widgets/HyperTextView.vala',
     'src/Widgets/ListView.vala',
     'src/Widgets/ScheduledRow.vala',
     'src/Widgets/SourceRow.vala',
