Renamed ListView to TaskListGrid, no functional changes

--- a/meson.build
+++ b/meson.build
@@ -63,9 +63,9 @@ executable(
     'src/Widgets/EntryPopover/DateTime.vala',
     'src/Widgets/EntryPopover/Generic.vala',
     'src/Widgets/EntryPopover/Location.vala',
-    'src/Widgets/ListView.vala',
     'src/Widgets/ScheduledRow.vala',
     'src/Widgets/SourceRow.vala',
+    'src/Widgets/TaskListGrid.vala',
     'src/Widgets/TaskRow.vala',
     'src/Widgets/ListSettingsPopover.vala',
     'src/TaskModel.vala',
