--- a/data/tasks.appdata.xml.in
+++ b/data/tasks.appdata.xml.in
@@ -17,6 +17,10 @@
       <description>
         <p>Improvements:</p>
         <ul>
+          <li>Replace the Delete shortcut key with Ctrl + Backspace</li>
+          <li>Add a confirmation dialog when deleting a task list</li>
+          <li>Fix an issue where an account name header could be displayed multiple times in the sidebar</li>
+          <li>Fix an issue with long descriptions being truncated at the beginning instead of the end</li>
           <li>Updated translations</li>
         </ul>
       </description>
