--- a/data/tasks.appdata.xml.in
+++ b/data/tasks.appdata.xml.in
@@ -21,6 +21,7 @@
           <li>Add a confirmation dialog when deleting a task list</li>
           <li>Fix an issue where an account name header could be displayed multiple times in the sidebar</li>
           <li>Fix an issue with long descriptions being truncated at the beginning instead of the end</li>
+          <li>Fix an issue where clearing descriptions wasn't saved</li>
           <li>Updated translations</li>
         </ul>
       </description>
