--- a/data/tasks.appdata.xml.in
+++ b/data/tasks.appdata.xml.in
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2019 elementary, Inc. <contact@elementary.io> -->
+<!-- Copyright 2019–2021 elementary, Inc. <contact@elementary.io> -->
 <component type="desktop-application">
   <id>io.elementary.tasks</id>
   <metadata_license>CC0-1.0</metadata_license>
@@ -13,7 +13,7 @@
     </p>
   </description>
   <releases>
-    <release version="6.0.4" date="2021-09-22" urgency="medium">
+    <release version="6.0.4" date="2021-09-27" urgency="medium">
       <description>
         <p>Fixes:</p>
         <ul>
