--- a/data/tasks.appdata.xml.in
+++ b/data/tasks.appdata.xml.in
@@ -22,6 +22,7 @@
         </ul>
         <p>Improvements:</p>
         <ul>
+          <li>Improved time zone handling</li>
           <li>Performance improvements</li>
           <li>Updated translations</li>
         </ul>
