--- a/meson.build
+++ b/meson.build
@@ -28,19 +28,19 @@ config_file = configure_file(
 libecal_dep = dependency('libecal-2.0')
 
 tasks_deps = [
-    dependency('champlain-0.12'),
-    dependency('champlain-gtk-0.12'),
+    # dependency('champlain-0.12'),
+    # dependency('champlain-gtk-0.12'),
     dependency('clutter-1.0'),
-    dependency('clutter-gtk-1.0'),
+    # dependency('clutter-gtk-1.0'),
     dependency('geocode-glib-1.0'),
     dependency('glib-2.0'),
     dependency('gobject-2.0'),
-    dependency('granite', version: '>=6.2.0'),
-    dependency('gtk+-3.0'),
+    # dependency('granite', version: '>=6.2.0'),
+    dependency('gtk4'),
     libecal_dep,
     dependency('libedataserver-1.2'),
     dependency('libgeoclue-2.0'),
-    dependency('libhandy-1', version: '>=0.90.0'),
+    dependency('libadwaita-1'),
     dependency('libical-glib'),
     dependency('libgdata')
 ]
