--- a/data/tasks.appdata.xml.in
+++ b/data/tasks.appdata.xml.in
@@ -13,6 +13,14 @@
     </p>
   </description>
   <releases>
+    <release version="6.2.0" date="2022-01-22" urgency="medium">
+      <description>
+        <p>Features:</p>
+        <ul>
+          <li>Send a notification when a task is due</li>
+        </ul>
+      </description>
+    </release>
     <release version="6.1.0" date="2021-12-13" urgency="medium">
       <description>
         <p>Features:</p>
