Initial Gtk4 steps

--- a/io.elementary.tasks.yml
+++ b/io.elementary.tasks.yml
@@ -1,6 +1,6 @@
 app-id: io.elementary.tasks
 runtime: io.elementary.Platform
-runtime-version: '6'
+runtime-version: daily
 sdk: io.elementary.Sdk
 command: io.elementary.tasks
 finish-args:
