--- a/data/tasks.appdata.xml.in
+++ b/data/tasks.appdata.xml.in
@@ -13,6 +13,15 @@
     </p>
   </description>
   <releases>
+    <release version="6.3.0" date="2022-05-16" urgency="medium">
+      <description>
+        <p>Features:</p>
+        <ul>
+          <li>Automatically synchronize a task list whenever it is selected or the network becomes available again</li>
+          <li>Added offline support for newly created task lists in case its available for the account</li>
+        </ul>
+      </description>
+    </release>
     <release version="6.2.0" date="2022-01-22" urgency="medium">
       <description>
         <p>Features:</p>
