--- a/data/tasks.appdata.xml.in
+++ b/data/tasks.appdata.xml.in
@@ -13,7 +13,7 @@
     </p>
   </description>
   <releases>
-    <release version="6.3.1" date="2022-11-14" urgency="medium">
+    <release version="6.3.1" date="2022-11-15" urgency="medium">
       <description>
         <p>Improvements:</p>
         <ul>
@@ -119,7 +119,7 @@
   </provides>
   <screenshots>
     <screenshot type="default">
-      <image>https://raw.githubusercontent.com/elementary/tasks/master/data/screenshot.png</image>
+      <image>https://raw.githubusercontent.com/elementary/tasks/6.3.1/data/screenshot.png</image>
     </screenshot>
   </screenshots>
   <content_rating type="oars-1.1">
