--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,4 @@
 ---
-
 name: Release
 
 on:
@@ -9,23 +8,23 @@ on:
 
 jobs:
   create_release:
-     name: Create Release
-     runs-on: ubuntu-latest
+    name: Create Release
+    runs-on: ubuntu-latest
 
-     if: github.event.pull_request.merged == true && true == contains(join(github.event.pull_request.labels.*.name), 'Release')
+    if: github.event.pull_request.merged == true && true == contains(join(github.event.pull_request.labels.*.name), 'Release')
 
-     steps:
-       - name: Checkout
-         uses: actions/checkout@v1
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-       - name: Release
-         uses: elementary/actions/release@master
-         env:
-           GIT_USER_TOKEN: "${{ secrets.GIT_USER_TOKEN }}"
-           GIT_USER_NAME: "elementaryBot"
-           GIT_USER_EMAIL: "builds@elementary.io"
-         with:
-           release_branch: 'odin'
+      - name: Release
+        uses: elementary/actions/release@master
+        env:
+          GIT_USER_TOKEN: "${{ secrets.GIT_USER_TOKEN }}"
+          GIT_USER_NAME: "elementaryBot"
+          GIT_USER_EMAIL: "builds@elementary.io"
+        with:
+          release_branch: "odin"
 
   deploy_flatpak:
     name: Deploy Flatpak
@@ -45,7 +44,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up QEMU for aarch64 emulation
         if: ${{ matrix.arch != 'x86_64' }}
