Switch to GHCR containers

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -50,9 +50,9 @@ jobs:
 
   gettext:
     name: Gettext
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     container:
-      image: elementary/docker:next-unstable
+      image: ghcr.io/elementary/docker:next-unstable
 
     steps:
     - name: Install git
