--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,8 @@ name: Release
 
 on:
   pull_request:
-    branches: master
-    types: closed
+    branches: [master]
+    types: [closed]
 
 jobs:
   create_release:
