--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,8 @@ Build-Depends: debhelper (>= 10.5.1),
                libgtk-3-dev,
                libhandy-1-dev (>= 0.90.0),
                libical-dev,
+               libportal-dev,
+               libportal-gtk3-dev,
                meson,
                valac
 Standards-Version: 4.1.1
