--- a/data/meson.build
+++ b/data/meson.build
@@ -29,10 +29,10 @@ i18n.merge_file(
 )
 
 i18n.merge_file(
-    input: 'tasks.appdata.xml.in',
-    output: meson.project_name() + '.appdata.xml',
-    po_dir: join_paths(meson.source_root(), 'po', 'extra'),
+    input: 'tasks.metainfo.xml.in',
+    output: meson.project_name() + '.metainfo.xml',
+    po_dir: meson.source_root() / 'po' / 'extra',
     type: 'xml',
     install: true,
-    install_dir: join_paths(get_option('datadir'), 'metainfo'),
+    install_dir: get_option('datadir') / 'metainfo',
 )
