--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
 project(
     'io.elementary.tasks', 'vala', 'c',
-    meson_version: '>= 0.49',
+    meson_version: '>= 0.57',
     version: '6.3.2'
 )
 
@@ -86,4 +86,4 @@ executable(
 subdir('data')
 subdir('po')
 
-meson.add_install_script('meson/post_install.py')
+gnome.post_install(glib_compile_schemas: true)
