--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
 
     container:
-      image: ghcr.io/elementary/flatpak-platform/runtime:6-${{ matrix.arch }}
+      image: ghcr.io/elementary/flatpak-platform/runtime:7.1-${{ matrix.arch }}
       options: --privileged
 
     steps:
@@ -52,22 +52,27 @@ jobs:
     name: Gettext
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/elementary/docker:next-unstable
+      image: ghcr.io/elementary/flatpak-platform/runtime:7.1-x86_64
+      options: --privileged
 
     steps:
-    - name: Install git
+    - name: Install git, python3-git and jq
       run: |
         apt-get update
-        apt-get install git -y
+        apt-get install git jq python3-git -y
 
     - name: Clone repository
       uses: actions/checkout@v4
       with:
         token: ${{ secrets.GIT_USER_TOKEN }}
 
+    - name: Configure Git
+      run: |
+        git config --global --add safe.directory "$GITHUB_WORKSPACE"
     - name: Update Translation Files
-      uses: elementary/actions/gettext-template@next
+      uses: elementary/actions/gettext-flatpak@main
+      with:
+        manifest-path: 'io.elementary.tasks.yml'
       env:
-        GIT_USER_TOKEN: ${{ secrets.GIT_USER_TOKEN }}
         GIT_USER_NAME: "elementaryBot"
         GIT_USER_EMAIL: "builds@elementary.io"
