--- a/data/tasks.metainfo.xml.in
+++ b/data/tasks.metainfo.xml.in
@@ -47,7 +47,9 @@
   <url type="help">https://github.com/elementary/tasks/discussions/categories/q-a</url>
   <url type="translate">https://l10n.elementary.io/engage/tasks</url>
 
-  <developer_name>elementary, Inc.</developer_name>
+  <developer id="org.elementaryos">
+    <name>elementary, Inc.</name>
+  </developer>
   <project_group>elementary</project_group>
   <update_contact>contact_at_elementary.io</update_contact>
 
