Use function for remove_all

--- a/meson.build
+++ b/meson.build
@@ -31,7 +31,7 @@ tasks_deps = [
     dependency('glib-2.0'),
     dependency('gobject-2.0'),
     dependency('granite-7', version: '>=7.0.0'),
-    dependency('gtk4'),
+    dependency('gtk4', version: '>=4.12'),
     libecal_dep,
     dependency('libedataserver-1.2'),
     dependency('libgeoclue-2.0'),
