--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -34,7 +34,7 @@ jobs:
         uses: flatpak/flatpak-github-actions/flatpak-builder@v6
         with:
           bundle: tasks.flatpak
-          manifest-path: io.elementary.tasks.yml
+          manifest-path: io.elementary.tasks.json
           repository-name: appcenter
           repository-url: https://flatpak.elementary.io/repo.flatpakrepo
           cache-key: "flatpak-builder-${{ github.sha }}"
@@ -72,7 +72,7 @@ jobs:
     - name: Update Translation Files
       uses: elementary/actions/gettext-flatpak@main
       with:
-        manifest-path: 'io.elementary.tasks.yml'
+        manifest-path: 'io.elementary.tasks.json'
       env:
         GIT_USER_NAME: "elementaryBot"
         GIT_USER_EMAIL: "builds@elementary.io"
