--- a/data/tasks.metainfo.xml.in
+++ b/data/tasks.metainfo.xml.in
@@ -54,6 +54,18 @@
   <update_contact>contact_at_elementary.io</update_contact>
 
   <releases>
+    <release version="6.3.3" date="2024-07-1" urgency="medium">
+      <description>
+        <p>Improvements:</p>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+      <issues>
+        <issue url="https://github.com/elementary/tasks/issues/372">Crash when system theme changes</issue>
+      </issues>
+    </release>
+
     <release version="6.3.2" date="2023-07-20" urgency="medium">
       <description>
         <p>Improvements:</p>
@@ -100,41 +112,8 @@
       </description>
     </release>
 
-    <release version="6.1.0" date="2021-12-13" urgency="medium">
-      <description>
-        <p>Features:</p>
-        <ul>
-          <li>Drag and drop tasks between lists</li>
-          <li>Follow email and web links in the task description with Control + Click</li>
-        </ul>
-        <p>Improvements:</p>
-        <ul>
-          <li>Improved time zone handling</li>
-          <li>Performance improvements</li>
-          <li>Updated translations</li>
-        </ul>
-      </description>
-    </release>
-
-    <release version="6.0.4" date="2021-09-27" urgency="medium">
-      <description>
-        <p>Fixes:</p>
-        <ul>
-          <li>Prevent account name headers from being displayed multiple times in the sidebar</li>
-          <li>Long descriptions are truncated at the end instead of the beginning</li>
-          <li>Removing descriptions is now saved</li>
-          <li>Placing the cursor in descriptions works consistently</li>
-        </ul>
-        <p>Improvements:</p>
-        <ul>
-          <li>Replace the Delete shortcut key with Ctrl + Backspace</li>
-          <li>Add a confirmation dialog when deleting a task list</li>
-          <li>Improve performance in lists with lots of completed tasks</li>
-          <li>Updated translations</li>
-        </ul>
-      </description>
-    </release>
-
+    <release version="6.1.0" date="2021-12-13" />
+    <release version="6.0.4" date="2021-09-27" />
     <release version="6.0.3" date="2021-08-26" />
     <release version="6.0.2" date="2021-08-09" />
     <release version="6.0.1" date="2021-07-28" />
