--- a/io.elementary.tasks.json
+++ b/io.elementary.tasks.json
@@ -57,7 +57,7 @@
             "config-opts": [
                 "-DCMAKE_BUILD_TYPE=RelWithDebInfo",
                 "-DENABLE_CANBERRA=OFF",
-                "-DENABLE_EXAMPLES=OFF"
+                "-DENABLE_EXAMPLES=OFF",
                 "-DENABLE_GOA=OFF",
                 "-DENABLE_GTK_DOC=OFF",
                 "-DENABLE_GTK=OFF",
@@ -66,7 +66,7 @@
                 "-DENABLE_VALA_BINDINGS=ON",
                 "-DENABLE_WEATHER=OFF",
                 "-DWITH_LIBDB=OFF",
-                "-DWITH_OPENLDAP=OFF",
+                "-DWITH_OPENLDAP=OFF"
             ],
             "sources": [
                 {
