--- a/meson.build
+++ b/meson.build
@@ -72,6 +72,7 @@ executable(
     'src/Widgets/EntryPopover/DateTime.vala',
     'src/Widgets/EntryPopover/Generic.vala',
     'src/Widgets/EntryPopover/Location.vala',
+    'src/Widgets/PopoverMenuitem.vala',
     'src/Widgets/ScheduledRow.vala',
     'src/Widgets/SourceRow.vala',
     'src/Widgets/ScheduledTaskListBox.vala',
