oops don't disable vapi

--- a/io.elementary.tasks.json
+++ b/io.elementary.tasks.json
@@ -137,8 +137,7 @@
             "buildsystem": "meson",
             "config-opts": [
                 "-Ddemos=false",
-                "-Dgtk_doc=false",
-                "-Dvapi=false"
+                "-Dgtk_doc=false"
             ],
             "sources": [
                 {
