--- a/debian/control
+++ b/debian/control
@@ -3,21 +3,18 @@ Section: x11
 Priority: extra
 Maintainer: elementary, Inc. <builds@elementary.io>
 Build-Depends: debhelper (>= 10.5.1),
-               libchamplain-0.12-dev,
-               libchamplain-gtk-0.12-dev,
-               libclutter-1.0-dev,
-               libclutter-gtk-1.0-dev,
+               libadwaita-1-dev,
                libecal2.0-dev,
                libedataserver1.2-dev,
                libgeoclue-2-dev,
                libgeocode-glib-dev,
                libgdata-dev,
-               libgranite-dev,
-               libgtk-3-dev,
-               libhandy-1-dev (>= 0.90.0),
+               libgranite-7-dev,
+               libgtk-4-dev,
                libical-dev,
                libportal-dev,
-               libportal-gtk3-dev,
+               libportal-gtk4-dev,
+               libshumate-dev,
                meson,
                valac
 Standards-Version: 4.1.1
