--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,4 +70,4 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - uses: elementary/actions/vala-lint@master
+    - uses: elementary/actions/vala-lint@main
